Add more info in about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,7 @@
         {{>header}}
 
         <div class="container">
+            <p>This app was created by John Babatola. It uses data from mapbox.com and darksky.net</p>
             <img src="/img/John.jpg" alt="My Image">
         </div>
     </div>
