--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,24 @@ img {
     width: 70px;
 }
 
+#toggle {
+    display: none;
+}
+
+.header_line { 
+    margin: 30px 0;
+    height: 2px;
+    background: black;
+    background: -webkit-gradient( linear, left bottom, right bottom, color-stop(0, rgb(71, 68, 68)), color-stop(0.2, gray), color-stop(0.4, purple), color-stop(0.5, red), color-stop(0.6, purple), color-stop(0.2, gray), color-stop(1, rgb(71, 68, 68)) );
+}
+
+.weather_line { 
+    margin: 65px 0;
+    height: 2px;
+    background: black;
+    background: -webkit-gradient( linear, left bottom, right bottom, color-stop(0, rgb(175, 119, 119)), color-stop(0.2, gray), color-stop(0.4, rgb(73, 73, 73)), color-stop(0.5, black), color-stop(0.6, rgb(73, 73, 73)), color-stop(0.2, gray), color-stop(1, rgb(182, 193, 221)) );
+}
+
 p {
     font-weight: 700;
     font-size: 18px;
@@ -73,7 +91,7 @@ p {
 
 .footer {
     color: #888888;
-    border-top: 1px solid #eeeeee;
+    border-top: 1px solid #797979;
     margin-top: 16px;
     padding: 16px 0;
     font-size: 30px;
