--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -22,7 +22,7 @@
                 <input placeholder="Location" type="text">
                 <button>Search</button>
             </form>
-
+            <div id="toggle" class="weather_line"></div>
             <p id="messageone"></p>
             <p id="messagetwo"></p>
 
