--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,9 @@ body {
 }
 
 .container {
-    width: 800px;
+    width: 42%;
+    min-width: 500px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
