--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -10,6 +10,6 @@
 <div class="topdiv">
     <div class="container">
         <h1> {{title}} <img src={{imgsrc}} id="headerimg" alt=""> </h1>
-        <div class="header_line toggle"></div>
+        <div class="header_line"></div>
     </div>
 </div>
