--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,6 @@ body {
     background-color: rgb(56, 56, 56);
     width: 100%;
     height: 40px;
-    margin: -10;
 }
 
 #nav a {
@@ -32,6 +31,7 @@ body {
     font-weight: 500;
     font-size: 30px;
     margin-right: 30px;
+    padding: 5px;
 }
 
 #nav a:hover {
@@ -40,7 +40,7 @@ body {
 
 .container {
     width: 42%;
-    min-width: 500px;
+    min-width: 400px;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -73,7 +73,7 @@ img {
 }
 
 .header_line { 
-    margin: 30px 0;
+    margin: 30px 5px;
     height: 2px;
     background: black;
     background: -webkit-gradient( linear, left bottom, right bottom, color-stop(0, rgb(71, 68, 68)), color-stop(0.2, gray), color-stop(0.4, purple), color-stop(0.5, red), color-stop(0.6, purple), color-stop(0.2, gray), color-stop(1, rgb(71, 68, 68)) );
@@ -89,12 +89,13 @@ img {
 p {
     font-weight: 700;
     font-size: 18px;
+    margin-left: 5px;
 }
 
 .footer {
     color: #888888;
     border-top: 1px solid #797979;
-    margin-top: 16px;
+    margin: 16px 5px;
     padding: 16px 0;
     font-size: 30px;
     font-weight: 900;
@@ -104,6 +105,7 @@ input {
     border: 1px solid #cccccc;
     padding: 8px;
     border-radius: 7px;
+    margin-left: 5px;
 }
 
 button {
